kibana-svc.yaml
apiVersion: v1
kind: Service
metadata:
  name: kibana
  labels:
    component: kibana
spec:
  selector:
    component: kibana
  type: NodePort
  ports:
  - name: http
    port: 80
    targetPort: http
    nodePort: 30001
