kibana-ingress.yaml
apiVersion: extensions/v1beta1
kind: Ingress
metadata:
  name: kibana-ingress
spec:
  rules:
  - host: kibana.dmp
    http:
      paths:
      - path: /
        backend:
          serviceName: kibana
          servicePort: http
